        * Make all the character classification isFOO macros work on EBCDIC
          platforms on all versions
        * Added isFOO_A synonyms for all character classification isFOO
          macros
   * Provide LIKELY/UNLIKELY branch prediction
   * Provide av_tindex/av_top_index
   * Provide __ASSERT_ for assertions inside macros
   * Provide UTF8_SAFE_SKIP

 3.35 - 2016-06-17


3.45 - 2019-03-19

   * Restore missing unit tests from the previous release. 

3.44 - 2019-02-20

   * Fix D_PPP_FIX_UTF8_ERRSV macro to use errsv value from passed argument

3.44 - 2018-09-19

    * Fix Devel::PPPort with Visual Studio by quoting $0.

3.42 - 2018-04-21

    * Include 'Changes' (this file) in the distribution.

3.41 - 2018-04-21

    * Fix security problem: CWE-134: Use of Externally-Controlled Format String.
    * Fix WIDEST_UTYPE.
    * Add the following functions:
      croak_sv, die_sv, mess_sv, warn_sv, mess, vmess, warn_nocontext,
      croak_nocontext, croak_no_modify, croak_memory_wrap, croak_xs_usage.
    * Delist functions listed as deprecated or unstable.
    * (perl #132876) define API macros on if the NEED_ macro is defined.
    * (perl #132876) only define croak_xs_usage()'s assert macro if cxu requested.
    * (perl #132761) updates for older perls.
    * Do not define PERL_MAGIC_qr more times.
    * Do not mask Perl_warn_nocontext and Perl_croak_nocontext.
      (Fixes compile errors on older threaded Perl versions.)
    * Skip ASCII tests on non-ASCII platforms.
    * Skip tests invalid on EBCDIC.
    * Will now compile under C++11.
    * Documentation improvements.

3.36 - 2017-05-14

    * Support Perl 5.26.* which no longer has '.' in @INC

3.35 - 2016-06-17

    * Fix compilation in bleadperl by removing a bad test.

3.34 - 2016-06-04

    * Fix compilation on Windows with certain compilers.
      (__attribute__ not recognized. (#GH 36))

3.33 - 2016-06-03

    * Add PERL_OP_PARENT related macros, and cBOOL
    * Add SvRXOK/SvRX/PERL_MAGIC_qr