@@ -21,6 +21,7 @@
    * Provide av_tindex/av_top_index
    * Provide __ASSERT_ for assertions inside macros
    * Provide UTF8_SAFE_SKIP
+   * Provide my_strnlen()
 
  3.35 - 2016-06-17
 
